--- a/layouts/partials/custom_head.html
+++ b/layouts/partials/custom_head.html
@@ -1,1 +1,1 @@
-<script async defer data-domain="edoardo.science" src="https://plausible.io/js/plausible.js"></script>
+<script async defer data-domain="juusechec.github.io" src="https://plausible.io/js/plausible.js"></script>
